--- a/TwitchTopGames/Base.lproj/Main.storyboard
+++ b/TwitchTopGames/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -23,19 +24,42 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="MIs-XO-ptt">
-                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="itemSize" width="134" height="184"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="gameCell" id="neK-tO-dcn">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="134" height="184"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="134" height="184"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yIJ-02-CZC">
+                                                    <rect key="frame" x="20" y="27.5" width="94" height="129"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="129" id="I2x-dD-NlH"/>
+                                                        <constraint firstAttribute="width" constant="94" id="OVM-Z9-fOX"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xcj-rg-UKc">
+                                                    <rect key="frame" x="8" y="166.5" width="118" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
                                         </view>
+                                        <constraints>
+                                            <constraint firstAttribute="trailingMargin" secondItem="xcj-rg-UKc" secondAttribute="trailing" id="C4b-Xg-bxj"/>
+                                            <constraint firstItem="xcj-rg-UKc" firstAttribute="leading" secondItem="neK-tO-dcn" secondAttribute="leadingMargin" id="Q6Q-XG-o9Y"/>
+                                            <constraint firstItem="xcj-rg-UKc" firstAttribute="top" secondItem="yIJ-02-CZC" secondAttribute="bottom" constant="10" id="SNm-9U-0qi"/>
+                                            <constraint firstItem="yIJ-02-CZC" firstAttribute="centerY" secondItem="neK-tO-dcn" secondAttribute="centerY" id="jCc-ug-wIg"/>
+                                            <constraint firstItem="yIJ-02-CZC" firstAttribute="centerX" secondItem="neK-tO-dcn" secondAttribute="centerX" id="rYd-NR-oXe"/>
+                                        </constraints>
+                                        <size key="customSize" width="134" height="184"/>
                                     </collectionViewCell>
                                 </cells>
                                 <connections>
