Adicionados nomes dos jogos na collectionView.

--- a/TwitchTopGames/Base.lproj/Main.storyboard
+++ b/TwitchTopGames/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="gameCell" id="neK-tO-dcn">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="gameCell" id="neK-tO-dcn" customClass="GameCollectionViewCell" customModule="TwitchTopGames" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="167" height="252"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -60,6 +60,10 @@
                                             <constraint firstItem="yIJ-02-CZC" firstAttribute="centerX" secondItem="neK-tO-dcn" secondAttribute="centerX" id="rYd-NR-oXe"/>
                                         </constraints>
                                         <size key="customSize" width="167" height="252"/>
+                                        <connections>
+                                            <outlet property="uiName" destination="xcj-rg-UKc" id="neZ-qB-gkW"/>
+                                            <outlet property="uiThumb" destination="yIJ-02-CZC" id="bZ7-PM-IeT"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                                 <connections>
