--- a/TwitchTopGames/Base.lproj/Main.storyboard
+++ b/TwitchTopGames/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="fF2-fB-6vG">
-                                <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
+                                <rect key="frame" x="0.0" y="50" width="1024" height="1316"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="MIs-XO-ptt">
                                     <size key="itemSize" width="167" height="272"/>
@@ -71,18 +71,44 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="oKb-kz-xzc"/>
                                 </connections>
                             </collectionView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WaC-js-IkI">
+                                <rect key="frame" x="0.0" y="20" width="1024" height="30"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3AK-pf-nPo">
+                                        <rect key="frame" x="0.0" y="0.0" width="1024" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="3AK-pf-nPo" firstAttribute="centerX" secondItem="WaC-js-IkI" secondAttribute="centerX" id="81P-uX-USL"/>
+                                    <constraint firstItem="3AK-pf-nPo" firstAttribute="leading" secondItem="WaC-js-IkI" secondAttribute="leading" id="LRX-ZE-msi"/>
+                                    <constraint firstAttribute="height" constant="30" id="agp-TK-BXp"/>
+                                    <constraint firstItem="3AK-pf-nPo" firstAttribute="centerY" secondItem="WaC-js-IkI" secondAttribute="centerY" id="alS-dW-9ec"/>
+                                    <constraint firstAttribute="trailing" secondItem="3AK-pf-nPo" secondAttribute="trailing" id="e28-6X-o3c"/>
+                                    <constraint firstItem="3AK-pf-nPo" firstAttribute="top" secondItem="WaC-js-IkI" secondAttribute="top" id="pvw-gW-bHT"/>
+                                    <constraint firstAttribute="bottom" secondItem="3AK-pf-nPo" secondAttribute="bottom" id="wnI-H6-Y50"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="WaC-js-IkI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="1AP-53-S11"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fF2-fB-6vG" secondAttribute="trailing" id="7br-V7-EkF"/>
+                            <constraint firstItem="fF2-fB-6vG" firstAttribute="top" secondItem="WaC-js-IkI" secondAttribute="bottom" id="8IF-Zj-LrG"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="fF2-fB-6vG" secondAttribute="bottom" id="CeA-Kn-1IE"/>
                             <constraint firstItem="fF2-fB-6vG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="FqJ-LE-sd6"/>
-                            <constraint firstItem="fF2-fB-6vG" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Tkf-Py-MvU"/>
+                            <constraint firstItem="WaC-js-IkI" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="bnd-83-UwU"/>
+                            <constraint firstItem="WaC-js-IkI" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="ihE-k2-3bH"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="statusView" destination="WaC-js-IkI" id="210-ei-JCV"/>
                         <outlet property="uiCollectionView" destination="fF2-fB-6vG" id="i5M-uI-Tzx"/>
+                        <outlet property="uiTitle" destination="3AK-pf-nPo" id="r7l-nV-yMt"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
